--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "@ngx-translate/core": "^7.0.0",
     "@ngx-translate/http-loader": "^0.1.0",
+    "@toverux/ngsweetalert2": "^1.2.2",
+    "angular2-toaster": "^4.0.1",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "firebase": "^4.1.3",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^1.7.1",
     "ng2-charts": "^1.6.0",
+    "ng2-toastr": "^4.1.2",
+    "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
